# swift-spiral-gen

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  create_movie.py  pyproject.toml  setup.py
Runs/cheap_1gyr_relax_merge/: run.sh
Runs/cheap_cpp/: run.sh
Runs/cosma_run/: run.sh  submit.sh
Runs/hires_1gyr_relax_merge/: run.sh
Runs/medres_500myr/: run.sh
Runs/medres_cpp/: run.sh
Runs/medres_movie/: run.sh
Runs/test_run/: run.sh
docs/: theory.md
examples/: mw_m31_merger.yml  mw_m31_merger_1000x.yml  mw_m31_merger_100x.yml  mw_m31_merger_10x.yml
src/swift_spiral_ics/: __init__.py
src/swift_spiral_ics/cli/: generate.py  movie.py  visualize.py
src/swift_spiral_ics/io/: __init__.py  swift_writer.py  yaml_writer.py
src/swift_spiral_ics/physics/: __init__.py  constants.py  grid_solver.py  grid_solver_cpp.cpp  kinematics.py  orbits.py  perturbations.py  potentials.py  profiles.py  sampling.py
src/swift_spiral_ics/templates/: __init__.py  eagle_isolated.yml  eagle_ref_cosmo.yml
src/swift_spiral_ics/utils/: random.py
tests/: test_integration.py  test_io.py  test_physics.py  test_physics_validation.py
