[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swift-spiral-ics"
version = "0.1.0"
description = "Generate SWIFT initial conditions for spiral disc galaxies with configurable spiral arms, bars, and merger configurations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SWIFT Spiral ICs Team"}
]
keywords = ["astrophysics", "galaxies", "simulations", "SWIFT", "initial-conditions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "h5py>=3.0",
    "pyyaml>=5.0",
    "tqdm>=4.60",
    "matplotlib>=3.3",
    "imageio>=2.9",
    "imageio-ffmpeg>=0.4",
    "unyt>=2.8",
    "galpy>=1.8",
    "numba>=0.56",
    "swiftsimio>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
]

[project.scripts]
swift-spiral-ics = "swift_spiral_ics.cli.generate:main"
swift-spiral-ics-viz = "swift_spiral_ics.cli.visualize:main"
swift-spiral-movie = "swift_spiral_ics.cli.movie:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"swift_spiral_ics" = ["templates/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
